--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Rock+3D&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Vibes&display=swap');
+
 
 .App {
   text-align: center;
